--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_test_51NRvrySDAHRRkkgbT0qEnf4OjQfqFPZpeh0lez
 
 
 
-REACT_APP_DEV_URL=http://localhost:1337
+REACT_APP_DEV_URL=https://deployecommerce-3ygm.onrender.com
